Add note about needing to give ant more memory to run all the tests
git-svn-id: https://svn.apache.org/repos/asf/poi/branches/ooxml@640056 13f79535-47bb-0310-9956-ffa450edef68